# qgis_cpp_api_apps

./: .gitignore  CMakeLists.txt  README.md
inc/: ld_geometry.h  ld_symbol_property.h  ldcommon.h
src/ll_qgis_app_demo/: CMakeLists.txt  main.cpp  mainwindow.cpp
src/ll_qgis_base_lib/: CMakeLists.txt  image.qrc  ll_qgis_base_lib.cpp  ll_qgis_base_lib.h  ll_qgis_base_lib_global.h  ll_qgis_base_lib_layerhandling.cpp  ll_qgis_base_lib_layerhandling.h  ll_qgis_base_lib_layertreeview_menu.cpp  ll_qgis_base_lib_layertreeview_menu.h  ll_qgis_base_lib_singleton.h  qgsstatusbarcoordinateswidget.h  qgsstatusbarscalewidget.h
src/ll_qgis_code_examples/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  panelimagebutton.cpp  panelimagebutton.h  panelitem.cpp  panelitem.h  res.qrc  vectordatadockwidget.cpp  vectordatadockwidget.h  vectordatadockwidget.ui
src/ll_qgis_demos/: CMakeLists.txt  annotationdockwidget.cpp  annotationdockwidget.h  annotationdockwidget.ui  diagramdockwidget.cpp  diagramdockwidget.h  diagramdockwidget.ui  dockwidget.cpp  dockwidget.h  dockwidget.ui  linesymboldockwidget.cpp  linesymboldockwidget.h  linesymboldockwidget.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  mapcanvasdockwidget.cpp  mapcanvasdockwidget.h  mapcanvasdockwidget.ui  polygondockwidget.cpp  polygondockwidget.h  polygondockwidget.ui  processingdockwidget.cpp  processingdockwidget.h  processingdockwidget.ui  rastersymboldockwidget.cpp  rastersymboldockwidget.h  rastersymboldockwidget.ui  symboldockwidget.cpp  symboldockwidget.h  symboldockwidget.ui  vectordatadockwidget.cpp  vectordatadockwidget.h  vectordatadockwidget.ui
src/ll_qgis_hello/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.ui  res.qrc
src/ll_qgis_layer_export/: CMakeLists.txt  exportdockwidget.cpp  exportdockwidget.h  exportdockwidget.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qgsvectorlayersaveasdialogbase.ui  vectorlayersaveasdialog.cpp  vectorlayersaveasdialog.h
src/ll_qgis_uav_realtime/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  paramdockwidget.cpp  paramdockwidget.h  paramdockwidget.ui
